// 브레인라이팅 웹 서비스 데이터 모델
// DBML 기준 DB: PostgreSQL

Project brainwriting {
  database_type: 'PostgreSQL'
  Note: '독립적인 아이디어 작성·평가와 최종 채택을 지원하는 브레인라이팅 서비스'
}

Enum SessionStatus {
  WRITING                  [note: '아이디어 작성 단계']
  EVALUATING               [note: '아이디어 평가 단계']
  RESULT_PENDING_SELECTION [note: '평가 종료 후 최종 채택 대기']
  COMPLETED                [note: '최종 아이디어 채택 완료']
  NO_IDEAS                 [note: '아이디어 없이 작성 단계 종료']
}

Table users {
  id uuid [pk, note: '내부 사용자 식별자']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  username varchar(100) [not null, unique, note: '로그인에 사용하는 아이디']
  password_hash varchar(255) [not null, note: '암호화된 비밀번호']
}

Table sessions {
  id uuid [pk, note: '세션 식별자이자 공유 링크 식별자']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  host_user_id uuid [not null, note: '세션을 생성하고 제어하는 진행자']
  title varchar(200) [not null]
  description text
  status SessionStatus [not null, default: 'WRITING']
  writing_ends_at timestamptz [not null]
  evaluation_ends_at timestamptz [not null]
  selected_idea_id uuid [note: '최종 채택된 아이디어. 채택 전에는 NULL이며 설정 후 변경할 수 없음']

  Note: '''
  writing_ends_at은 evaluation_ends_at보다 빨라야 한다.
  selected_idea_id는 반드시 이 세션에 속한 아이디어여야 한다.
  selected_idea_id가 설정되면 status는 COMPLETED여야 한다.
  NO_IDEAS 상태에서는 selected_idea_id가 NULL이어야 한다.
  '''
}

Table participants {
  id uuid [pk, note: '세션 참가자 식별자']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  session_id uuid [not null]
  user_id uuid [note: '로그인 참가자는 사용자 ID, 비로그인 참가자는 NULL']
  nickname varchar(30) [not null, note: '앞뒤 공백 제거 후 표시하는 닉네임']
  reconnect_token varchar(255) [note: '비로그인 참가자의 동일 브라우저 재접속용 세션별 토큰']

  indexes {
    (session_id, user_id) [unique, note: '로그인 사용자의 동일 세션 중복 참가 방지. user_id가 NULL인 행은 제외하는 부분 UNIQUE로 구현']
    (session_id, nickname) [unique, note: '세션 안에서 닉네임 중복 금지']
    (session_id, reconnect_token) [unique, note: '세션 안에서 재접속 토큰 중복 금지. NULL인 행은 제외하는 부분 UNIQUE로 구현']
  }

  Note: '''
  진행자도 공유 링크로 접속하여 닉네임을 입력해야 Participant가 된다.
  로그인 참가자는 user_id를 사용해 재접속하며 reconnect_token은 NULL이다.
  비로그인 참가자는 user_id가 NULL이고 reconnect_token을 사용한다.
  '''
}

Table ideas {
  id uuid [pk]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  participant_id uuid [not null, note: '아이디어를 작성한 참가자']
  content text [not null]

  indexes {
    participant_id [name: 'idx_ideas_participant']
  }

  Note: '''
  아이디어의 소속 세션은 participant_id를 통해 확인한다.
  참가자별 최대 3개 제한은 생성 트랜잭션에서 검증한다.
  사용자가 저장을 누르지 않아 브라우저에만 존재하는 입력은 저장하지 않는다.
  저장 API는 ID가 없으면 새 행을 생성하고, ID가 있으면 해당 참가자 소유의 행을 수정한다.
  '''
}

Table evaluations {
  id uuid [pk]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  participant_id uuid [not null]
  idea_id uuid [not null]
  value smallint [not null]

  indexes {
    (participant_id, idea_id) [unique, note: '참가자별 아이디어 평가 하나만 허용']
    idea_id
  }

  Note: '''
  value는 -1, 0, 1만 허용한다.
  participant_id와 idea_id는 같은 세션에 속해야 한다.
  참가자는 자신이 작성한 아이디어를 평가할 수 없다.
  저장 API는 participant_id와 idea_id 조합으로 Upsert하여 기존 평가가 있으면 value를 수정한다.
  사용자가 저장을 누르지 않은 평가 선택은 저장하지 않는다.
  '''
}

Ref: sessions.host_user_id > users.id
Ref: participants.session_id > sessions.id
Ref: participants.user_id > users.id
Ref: ideas.participant_id > participants.id
Ref: evaluations.participant_id > participants.id
Ref: evaluations.idea_id > ideas.id
Ref: sessions.selected_idea_id > ideas.id
